# masiv

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: acmg_automated_classification_research_report.md
docs/papers/: ACMG_guideline.md  ACMG_guideline_2015_official.md  InterVar.md  autoACMG_thesis.md  autopvs1.md  point_system_ACMG.md  sherloc.md
docs/superpowers/plans/: 2026-05-15-phase-a-core.md
docs/superpowers/specs/: 2026-05-15-phase-a-design.md
src/masiv/: cli.py  combiner.py  exceptions.py  models.py  rules.py  vcf.py
tests/: test_cli.py  test_combiner.py  test_models.py  test_rules.py  test_vcf.py
tests/fixtures/: criteria_likely_pathogenic.json  sample.vcf
