[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "masiv"
version = "0.1.0"
description = "Multi Agent System for Interpreting Variants deterministic ACMG core"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
masiv = "masiv.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["masiv"]
